# Master-Thesis

./: ARIMA GARCH FINAL.py  FINAL_SUMMARY_All_Coins_backtest.csv  FINAL_SUMMARY_All_Coins_horizon_evaluation.csv  Marktkapitalisierung.py  NB-Spec.md  NB_Masterthesis_ARIMA_GARCH.ipynb  R.R  README.md  Spec.md  backtest_4jahre180.txt  backtest_4jahre30.txt  backtest_4jahre365.txt  backtest_4jahre365withEGARCH.txt  backtest_4jahre60.txt  backtest_4jahre90.txt  backtest_5jahre90.txt  backtest_6jahre90.txt  backtest_Main.txt  backtest_robustheitscheck.txt  connect_gui.py  cover_letter.md  cover_letter_polished.md  create_ppt.py  cv_tailored.md  cv_tailored_polished.md  encrypt_excel.py  ethereum_multi_horizon_eval_details_d0.csv  ethereum_rolling_1step_results_d0.csv  final_decrypted_data.xlsx  g_CV_oeffel 05.25_rb.docx  he_4jahre60.txt  he_Main.txt  he_robustheitscheck.txt  masterarbeit.tex  model_1.py  model_2.py  original_data.xlsx  output_new.txt  output_new200.txt  output_new350.txt  (+8 more)
arima_garch/: __init__.py  __main__.py  cli.py  config.py  data.py  diagnostics.py  logging_utils.py  metrics.py  modeling.py  pipeline.py  plotting.py  risk.py  stats.py
extracted/: ARIMA_GARCH_FINAL.py.txt  Bewerbung_als_Fachexperte_Produktmanagement_Wertpapiere.pdf.txt  Bewerbung_als_Fast_Tracker_im_Risiko-Management_.pdf.txt  Bewerbung_als_Investment_Associate_bei_Red_Bull_Ventures.pdf.txt  Bewerbung_als_Manager_Transaktionsberatung_Financial_Modelling_Analytics.pdf.txt  Bewerbung_als_Trainee_im_Risk_Modelling.pdf.txt  Certificate_VM2_Campus02_3.pdf.txt  Coursera_Z0MBGWK4Z33C.pdf.txt  (+13 more)
(+13 files in other folders)
