[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arima-garch-crypto"
version = "0.1.0"
description = "ARIMA-GARCH time-series analysis for cryptocurrencies"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Markus Oeffel" }
]
license = { text = "Proprietary" }

# Core dependencies for the full pipeline
dependencies = [
  "numpy>=1.20",
  "pandas>=1.3",
  "statsmodels>=0.13",
  "arch>=5.0",
  "yfinance>=0.2",
  "matplotlib>=3.5",
  "scipy>=1.7",
]

[project.optional-dependencies]
reports = [
  "dieboldmariano>=1.0",
  "dataframe_image>=0.1",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[project.scripts]
arima-garch = "arima_garch.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arima_garch*"]
